# stonefish_rl

./: CMakeLists.txt  EnvStonefishRL.py  README.md  client.py  girona500_basic.scn  girona500_eca5emicro_gripper.scn  requirements.txt
Resources/acrobot/: acrobot_scene  acrobot_scene.xml
Resources/g500/scenarios/: girona500_basic.scn
Resources/g500/scenarios/vehicles/: girona500.scn  girona500_eca5emicro_gripper.scn
Resources/minimal/: minimal_scene.xml
Resources/scenarios/: girona500_basic.scn
Resources/scenarios/vehicles/: girona500.scn  girona500_eca5emicro_gripper.scn
Resources/tests_sensors_actuators/scenarios/: girona500_basic.scn
Resources/udg_cirs-iauv_simulation/scenarios/: girona500_basic.scn
acrobot/: acro_training.py  acrobot_scene  evaluate_acro.py
core/: EnvStonefishRL.py  launch_stonefish.py
docs/: README_acrobot.md  README_girona500.md  README_instalacio.md  README_installation.md  README_manual.md  README_tests.md  manual.md
g500/: G500_training_ppo.py  test_G500.py
include/: StonefishRL.h
logs/: evaluations.npz
scenes/: minimal_learning.xml  minimal_scene.xml
scripts/: AcrobotEnv.py  EnvStonefishRL.py  G500Env.py  G500_training.py  acro_learning.py  acro_training.py  evaluate_acro.py  test_G500.py  test_acrobot.py
scripts/acrobot/: AcrobotEnv.py  acro_training.py  evaluate_acro.py  test_acrobot.py
scripts/core/: EnvStonefishRL.py  launch_stonefish.py
scripts/g500/: G500Env.py  G500_training_ppo.py  evaluate_g500.py  test_G500.py
scripts/tests_sensors_actuators/: G500TestEnv.py  test.py
src/: EnvStonefishRL.py  LearningTestManager.cpp  LearningTestManager.h  StonefishRL.cpp  main.cpp  ztest.cpp
(+3 files in other folders)
